--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,9 @@
 @import './base/settings';
 @import './base/base';
+@import './components/basic-layout.scss';
+@import './components/button.scss';
+@import './components/header.scss';
+@import './components/expensesSummary.scss';
+@import './components/filters.scss';
+@import './components/form.scss';
+@import './components/expenselist.scss'
