--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,4 +1,9 @@
 // Colors
+$white: white;
+$light-green: #55c882;
+$grey: #F7F7F7;
+$font-color: #151D41;
+$dark-grey: #666666;
 // Spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
