--- a/src/styles/components/basic-layout.scss
+++ b/src/styles/components/basic-layout.scss
@@ -8,7 +8,7 @@
     align-items: center;
     background-repeat: no-repeat;
     background-size: cover;
-    overflow: hidden;
+    overflow-y: hidden;
 }
 
 .box{
