--- a/src/styles/components/form.scss
+++ b/src/styles/components/form.scss
@@ -24,5 +24,16 @@
     button:hover{
         transform: none;
     }
+    @media (max-width: $desktop-breakpoint) {
+        padding: $s-size;
+    }
+}
+
+.badrequest{
+    color: #d9534f;
+    padding: $s-size 0 0 $xl-size*4;
+    @media (max-width: $desktop-breakpoint) {
+        padding: $s-size;
+    }
 }
 
